--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-}
-
 .wrapper {
     max-width: 1300px;
     margin: 0 auto;
@@ -12,6 +9,191 @@ body {
 
 }
 
+.bg-wrapper {
+    background-image: url("assets/images/header-bg.png");
+    background-size: cover;
+    height: 564px;
+
+
+}
+.header-heading {
+    font-size: 41px;
+    letter-spacing: 0;
+    color: #ffffff;
+    font-family: 'Lucida Sans', SansSerif;
+    font-style: italic;
+    text-align: center;
+}
+
+.video video {
+    width: 550px;
+}
+
+.video .text-wrapper {
+    justify-content: space-between;
+}
+
+.video-heading {
+    font-size: 63px;
+    letter-spacing: 1px;
+    color: #ffffff;
+    font-family: 'Asap', SansSerif;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.yellow {
+    color: #f5c506;
+}
+
+.arrays {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: -270px;
+}
+
+.twitter {
+    background-image: url("assets/images/twitter-bg.png");
+    background-size: cover;
+    height: 508px;
+    border: 1px solid #f5c506;
+}
+
+.twitter-heading {
+    text-transform: uppercase;
+    font-size: 37px;
+    letter-spacing: 0;
+    color: #ffffff;
+    font-family: 'PT Sans', SansSerif;
+    font-weight: 400;
+}
+
+.twitts {
+    display: flex;
+}
+
+.twitter-video {
+    width: 312px;
+    height: 230px;
+}
+
+.twitter-icon {
+    display: block;
+    margin: 48px auto;
+}
+
+.twitts_item {
+    width: 340px;
+    height: 230px;
+    background-color: #ec9e03;
+    position: relative;
+}
+
+.plus_button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.twitts-img {
+    margin-left: auto;
+
+}
+
+.twitts-number {
+    font-size: 25px;
+    letter-spacing: 0;
+    line-height: 38px;
+    color: #ffffff;
+    font-family: 'Segoe WP', SansSerif;
+    font-weight: 300;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    margin: 0;
+
+}
+
+.twitts-p {
+    font-size: 29px;
+    letter-spacing: 0;
+    line-height: 38px;
+    color: #ffffff;
+    font-family: 'Segoe WP', SansSerif;
+    font-weight: 300;
+    margin: 20px;
+}
+
+
+.twitter-slider {
+    width: 896px;
+    height: 15px;
+    border-radius: 7px;
+    background-color: #ffffff;
+    opacity: 0.48;
+    position: relative;
+    margin: 130px auto 20px;
+}
+
+.twitter-subsluder {
+    width: 22%;
+    height: 15px;
+    border-radius: 7px;
+    background-color: #ec9e03;
+    position: absolute;
+    left: 20%;
+}
+
+.advantages {
+    background-image: url("assets/images/advantages-bg.png");
+    background-size: cover;
+    height: 212px;
+}
+
+.advantages .text-wrapper {
+    height: 212px;
+    display: flex;
+    border-left: 1px solid lightgray;
+
+}
+
+.advantages-item-border {
+    width: 33.333333333333%;
+    height: 212px;
+    border-right: 1px solid lightgray;
+    margin: 0 auto;
+
+}
+
+.advantages-item {
+    margin: 40px 0;
+}
+
+.advantages-icon {
+    display: block;
+    margin: 0 auto;
+}
+
+.advantages-header {
+    font-size: 27px;
+    letter-spacing: 0;
+    color: #000000;
+    font-family: 'Segoe UI', SansSerif;
+    font-weight: 300;
+    text-align: center;
+    margin: 0;
+
+}
+
+.devices {
+
+    background-image: url("assets/images/devices-bg.png");
+    background-size: cover;
+    height: 490px;
+    border: 1px solid gray;
+}
 
 .devices-heading {
     text-transform: uppercase;
@@ -21,26 +203,34 @@ body {
     font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     text-align: center;
+    margin: 70px 0 59px;
 }
 
 .devices-flex {
     display: flex;
     justify-content: space-between;
+    margin: 0;
 }
 
 .devices-pictures {
     position: relative;
+    margin: 0;
+}
+
+.devices-pictures__item {
+    margin: 0 10px;
 }
 
 .free {
     font-size: 19px;
+    white-space: nowrap;
+    text-transform: uppercase;
     letter-spacing: 0;
     color: #ffffff;
     font-family: 'PT Sans Narrow', sans-serif;
     font-weight: 700;
     background-color: #f5c506;
-    width: 115px;
-    height: 115px;
+
     text-align: center;
     line-height: 115px;
     border-radius: 50%;
@@ -61,16 +251,27 @@ body {
     color: #a9a9a7;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    margin: 10px;
 
 }
 
 footer {
     background-image: url("assets/images/footer-bg.png");
     background-size: cover;
+    height: 65px;
     -webkit-box-shadow: 0 -7px 5px 0 rgba(0, 0, 0, 0.78);
     -moz-box-shadow: 0 -7px 5px 0 rgba(0, 0, 0, 0.78);
     box-shadow: 0 -7px 5px 0 rgba(0, 0, 0, 0.78);
+}
 
+footer .text-wrapper, header .text-wrapper, .video .text-wrapper {
+    display: flex;
+
+}
+
+.footer-logo {
+    width: 53px;
+    vertical-align: middle;
 }
 
 .footer-heading {
@@ -80,9 +281,4 @@ footer {
     font-style: italic;
     text-align: center;
     letter-spacing: 2px;
-    display: inline;
-}
-
-footer.text-wrapper {
-    display: flex;
 }
