--- a/fonts.css
+++ b/fonts.css
@@ -19,8 +19,8 @@
     font-weight: normal;
     font-style: italic;
 }
-/*
-@font-face {
+
+/*@font-face {
     font-family: 'Segoe UI';
     src: url('assets/fonts/SegoeUI-BoldItalic.eot');
     src: url('assets/fonts/SegoeUI-BoldItalic.eot?#iefix') format('embedded-opentype'),
@@ -29,7 +29,7 @@
     url('assets/fonts/SegoeUI-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-}
+}*/
 
 @font-face {
     font-family: 'Segoe UI';
@@ -41,7 +41,7 @@
     font-weight: bold;
     font-style: normal;
 }
-
+/*
 @font-face {
     font-family: 'Segoe UI';
     src: url('assets/fonts/SegoeUI-Italic.eot');
