--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header {
     font-size: 17px;
     letter-spacing: 0;
     color: #9b7d08;
-    font-family: 'Segoe WP, ,sans-serif;
+    font-family: 'Segoe WP', sans-serif;
     text-align: center;
     width: 411px;
     height: 41px;
