--- a/style.css
+++ b/style.css
@@ -285,6 +285,36 @@ header {
 
 }
 
+.design .advantages-icon {
+    padding-top: 19px;
+}
+
+.design .advantages-header {
+    margin-top: 11px;
+    margin-left: 34px;
+    letter-spacing: 3px;
+}
+
+.custom .advantages-icon {
+    padding-left: 16px
+}
+
+.custom .advantages-header {
+    margin-top: 11px;
+    margin-left: 22px;
+    letter-spacing: 3px;
+}
+.itfree .advantages-icon {
+    padding-right: 41px;
+    padding-top: 13px;
+}
+
+.itfree .advantages-header {
+    margin-top: 9px;
+    margin-left: -30px;
+    letter-spacing: 3px;
+}
+
 .advantages-item {
     margin: 40px 0;
 }
